--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - The freeCodeCamp Team
 
     -->
-  <h1>hello word!</h1>
+  <h1>hello word!We are developers!!</h1>
     <script  src="js/index.js"></script>
 
   </body>
